# havencore

./: .env.example  .env.tmpl  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  compose.yaml  gitmodules-DELETEME
services/agent/: Dockerfile  README.md  pyproject.toml
services/agent/app/: conversation_db.py  requirements.txt  selene_agent.py
services/agent/app/utils/: config.py  config.py.tmpl  general_tools_defs.py  havencore_homeassistant_mcp_server.py  mcp_client_manager.py  mcp_server.py  (+6 more)
services/agent/frontend/: package-lock.json  package.json  vite.config.js
services/agent/selene_agent/: orchestrator.py  selene_agent.py
services/agent/tests/: conftest.py  test_act_handler.py  test_api_llm_provider.py  test_audio_store.py  test_chat_header_device_name.py  test_chat_header_idle_timeout.py  test_companion_face_chain.py  test_companion_upload.py  test_companion_vision_chain.py  test_confirmation_flow.py  test_context_size_summarize.py  test_conversations_api.py  test_device_name_helper.py  test_event_rate_limit.py  test_idle_timeout_override.py  test_integration_memory_review.py  test_l4_context.py  test_mass_play_announcement.py  test_mcp_vision_tools.py  test_memory_api.py  test_memory_clustering.py  test_memory_math.py  test_memory_review_handler.py  test_metrics_db.py  test_pool_sweep_size.py  test_provider_anthropic_translation.py  test_provider_factory.py  test_qdrant_search.py  test_quiet_hours.py  test_reasoning_event.py  test_reminder_handler.py  test_reminder_personalize.py  test_reminder_tool.py  test_resume_endpoint.py  test_routine_handler.py  test_sensor_events.py  test_session_pool_timeout.py  test_speaker_notifier.py  test_summarize_and_reset.py  test_tokens.py  (+4 more)
(+278 files in other folders)
