[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "selene-agent"
version = "0.1.0"
dependencies = [
    "openai",
    "HomeAssistant-API",
    "gradio",
    "wolframalpha",
    "nltk",
    "fastapi",
    "uvicorn",
    "pytz",
    "typing-extensions>=4.0.0",
    "qdrant-client>=1.7.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "mcp-server-fetch",
    "mcp==1.1.2",
    "requests>=2.31.0",
    "paho-mqtt>=2.1.0",
    "aiosmtplib"
]

[project.scripts]
agent = "selene_agent.selene_agent:main"